# SNR-Estimator-comparison

./: CMakeLists.txt  README.md  SNR_Est_comp.grc
gr-MPOWER/: MANIFEST.md
gr-MPOWER/cmake/Modules/: MPOWERConfig.cmake
gr-MPOWER/docs/: README.MPOWER
gr-MPOWER/docs/doxygen/: Doxyfile.in
gr-MPOWER/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-MPOWER/grc/: CMakeLists.txt  MPOWER_power_ff.xml  MPOWER_power_ff.xml~
gr-MPOWER/include/MPOWER/: CMakeLists.txt  api.h  power_ff.h
gr-MPOWER/lib/: CMakeLists.txt  power_ff_impl.cc  power_ff_impl.cc~  power_ff_impl.h  qa_MPOWER.cc  qa_MPOWER.h  qa_power_ff.cc  qa_power_ff.h  test_MPOWER.cc
gr-MPOWER/python/: CMakeLists.txt  __init__.py  qa_power_ff.py
gr-MPOWER/swig/: CMakeLists.txt  MPOWER_swig.i
